# AlcOpt

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dns  Dockerfile.nginx  LICENSE  README.md  calculator.ipynb  certbot-renew.sh  dnsmasq.conf  docker-compose.yml  form.py  makefile  nginx.conf  pyproject.toml  requirements.txt  run_app.py  schema.sql  secrets-example.toml  setup.py
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
alcopt/: auth.py  config.py  labels.py  sqlalchemy_models.py  streamlit_utils.py  theme.py  utils.py
alcopt/app/: Home.py  main.py
alcopt/app/pages/: 00_Home.py  01_Tasting_Form.py  02_Brew_Log.py  03_Bottle_Log.py  04_Information.py  05_Container_Labels.py
alcopt/database/: models.py  queries.py  utils.py
backend/: Dockerfile  pyproject.toml
backend/alcopt/: auth.py  config.py  labels.py  streamlit_utils.py  utils.py
backend/alcopt/api/: dependencies.py  main.py  rate_limit.py  schemas.py
backend/alcopt/api/routers/: auth.py  brew.py  containers.py  home.py  labels.py  reviews.py
backend/alcopt/database/: models.py  queries.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 110d67c318be_initial_schema.py
backend/tests/: conftest.py  test_auth.py  test_brew.py  test_containers.py  test_home.py  test_labels.py  test_reviews.py
data/: tasting.csv
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/__tests__/: ErrorBoundary.test.tsx  Message.test.tsx  api.test.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/bottles/: page.tsx
frontend/src/app/brew/: page.tsx
frontend/src/app/info/: page.tsx
frontend/src/app/labels/: page.tsx
frontend/src/components/: AuthProvider.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Header.tsx  Message.tsx
frontend/src/lib/: api.ts  theme.ts  types.ts
notebooks/: calculator.ipynb
scripts/: refactor_to_containers.py  sqlite_to_postgres.py
streamlit/: Home.py  alcohols.db  data.csv
streamlit/.streamlit/: secrets.toml
streamlit/pages/: 01_Tasting_Form.py  02_Brew_Log.py  02_Mead_Tracking.py  03_Bottle_Log.py  03_Bottle_Tracking.py  04_Information.py  Mead_Tracking.py  Tasting_Form.py
(+10 files in other folders)
