[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alcopt"
version = "0.1.0"
description = "Alcohol recording and optimization"
authors = [
    { name = "Thomas Hayama", email = "thomashayama@gmail.com" }
]

[tool.setuptools]
packages = ["alcopt"]