[project]
name = "alcopt"
version = "0.3.0"
description = "Alcohol recording and optimization"
authors = [
    { name = "Thomas Hayama", email = "thomashayama@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "pandas",
    "numpy",
    "sqlalchemy",
    "unum",
    "psycopg2-binary",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.10",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alcopt"]
